# gammactrl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh
data/: org.gammactrl.desktop
src/: main.c
